# LLM_DIET

./: .gitignore  README.md  pyproject.toml
.cecl/: graph.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.llm_diet/: session.json
context_engine/: apply.py  cli.py  installer.py  intent.py  patcher.py  planner.py  policy.py  pruner.py  ranker.py  retrieval.py  shadow_server.py  validator.py  watcher.py
context_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
hooks/: post_tool_use.py  pre_tool_use.py  user_prompt_submit.py
llm_diet/: diet_run.py
