[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-diet"
version = "0.1.7"
description = "Deterministic codebase context retrieval for LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "watchdog>=4.0",
    "tree-sitter>=0.25",
    "tree-sitter-language-pack>=0.1",
    "anthropic>=0.40",
    "mcp>=1.0",
]

[project.scripts]
context-engine = "context_engine.cli:main"
context-engine-mcp = "context_engine.mcp_server:mcp.run"
diet-mcp = "llm_diet.mcp_server:main"
diet-run = "llm_diet.diet_run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["context_engine*", "llm_diet*"]
